<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="26dp"
    android:paddingEnd="26dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_lan_title"
        android:textColor="#FF111111"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_lan_subtitle"
        android:textColor="#FF222222"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_set_lan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/onboarding_lan_set_title"
        android:textColor="#FF666666"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />

    <LinearLayout
        android:id="@+id/ll_lang"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_onborading_set_lang"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_set_lan_title">

        <TextView
            android:id="@+id/tv_select_lang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingEnd="8dp"
            android:singleLine="true"
            android:textColor="#FF222222"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/img_arr_down" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_set_default_browser"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="#FF111111"
        android:text="@string/onboarding_lan_set_default_browser"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="0dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_skip"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:backgroundTint="#00000000"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/onboarding_lan_skip"
        android:textAlignment="center"
        android:textColor="#FF999999"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
