<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/dialog_bg_shape"
        android:paddingStart="16dp"
        android:paddingTop="20dp"
        android:paddingEnd="16dp"
        android:paddingBottom="36dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_remind_dialog_title"
            android:textColor="@color/photonBlack"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_remind_dialog_content"
                android:textColor="@color/photonBlack"
                android:textSize="16sp" />

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_disagree"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FFF8F8F8"
            android:text="@string/privacy_remind_dialog_disagree"
            android:textAlignment="center"
            android:textColor="@color/photonBlack"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollView"
            app:layout_constraintWidth_percent="0.45"
            tools:ignore="ButtonStyleXmlDetector" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_agree"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/privacy_remind_dialog_agree"
            android:textAlignment="center"
            android:textColor="#FF1052FF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#FFEAEBFF"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_disagree"
            app:layout_constraintWidth_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
