<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="26dp"
    android:paddingEnd="26dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_second_title"
        android:textColor="@color/fx_mobile_text_color_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <!-- 网页 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/img_onboarding_second_page_web" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/onboarding_second_content_web"
                android:textColor="@color/fx_mobile_text_color_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- 视频 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/img_onboarding_second_page_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/onboarding_second_content_video"
                android:textColor="@color/fx_mobile_text_color_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- 文档 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/img_onboarding_second_page_doc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/onboarding_second_content_doc"
                android:textColor="@color/fx_mobile_text_color_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_content_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="47dp"
        android:paddingEnd="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_content">

        <!-- 漫画 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/img_onboarding_second_page_mh" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/onboarding_second_content_cart"
                android:textColor="@color/fx_mobile_text_color_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- 小红书 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/img_onboarding_second_page_rednote" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/onboarding_second_content_rn"
                android:textColor="@color/fx_mobile_text_color_primary"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_set_lan_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.2"
        android:text="@string/onboarding_second_subtitle"
        android:textAlignment="center"
        android:textColor="@color/fx_mobile_text_color_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_content_two" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_i_see"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/fx_mobile_action_color_third"
        android:text="@string/onboarding_second_known_btn"
        android:textAlignment="center"
        android:textColor="#FFFFFFFF"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeWidth="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
